# codec2_simplified

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.MD
examples/: CMakeLists.txt  codec2_example.c
src/: ButterworthFilter.cpp  SampleFilter.cpp  codebook.c  codebookd.c  codebookdt.c  codebookge.c  codebookjnd.c  codebookjvm.c  codebooklspmelvq.c  codebookmel.c  codebookres.c  codebookvq.c  codebookvqanssi.c  codec2.c  defines.h  dump.c  fifo.c  interp.c  kiss_fft.c  lpc.c  lsp.c  nlp.c  pack.c  phase.c  phaseexp.c  postfilter.c  quantise.c  sine.c  wo_table.h
tools/: CMakeLists.txt  codec2_decode.c  codec2_decode_enhanced.c  codec2_encode.c  codec2_encode_enhanced.c  create_test_files.c  create_test_wav.c  wav_util.c  wav_util.h  wav_util_enhanced.c  wav_util_enhanced.h
